# didethresolver

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  example.env  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-image.yml  coverage.yml  ghcr-image.yml  github-pages.yml  prod-ci-image.yml
didethresolver/: Cargo.toml
didethresolver-gateway/: Cargo.toml
didethresolver-gateway/src/: main.rs
didethresolver/src/: main.rs
examples/rpc_namespaces/: Cargo.toml  README.md
examples/rpc_namespaces/src/: main.rs  turtle_rpc.rs
gateway/: Cargo.toml
gateway/src/: main.rs
lib/: Cargo.toml
lib-didethresolver/: Cargo.toml
lib-didethresolver/src/: error.rs  lib.rs  resolver.rs  rpc.rs  util.rs
lib-didethresolver/src/rpc/: api.rs  methods.rs
lib-didethresolver/src/types/: did_url.rs  ethr.rs
lib-didethresolver/tests/: integration_test.rs
lib-didethresolver/tests/integration_util/: mod.rs
lib/src/: error.rs  lib.rs  resolver.rs  rpc.rs  types.rs  util.rs
lib/src/abi/: DIDRegistry.json
lib/src/resolver/: did_registry.rs
lib/src/rpc/: api.rs  methods.rs
lib/src/types/: did_parser.rs  did_url.rs  ethr.rs  xmtp.rs
lib/tests/: integration_test.rs
lib/tests/integration_util/: mod.rs
libresolver/: Cargo.toml
libresolver/src/: lib.rs  rpc.rs
libresolver/src/rpc/: api.rs  methods.rs
libresolver/src/types/: ethr.rs
libresolver/tests/: integration_test.rs
libresolver/tests/integration_util/: mod.rs
prod/: Dockerfile
resolver/: Cargo.toml
resolver/src/: argenv.rs  main.rs
src/: lib.rs  main.rs  resolver.rs  rpc.rs  types.rs  util.rs
src/resolver/: did_registry.rs
src/rpc/: api.rs  methods.rs
src/types/: did_parser.rs  did_url.rs  ethr.rs
tests/: integration_test.rs
tests/integration_util/: mod.rs
