[package]
name = "didethresolver"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
panic = 'abort'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.34", features = ["macros", "rt"] }
url = { version = "2.5", features = ["serde"] }
percent-encoding = "2.3.1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
jsonrpsee = { version = "0.21", features = ["macros", "server", "client-core"] }
anyhow = "1"
thiserror = "1"
argh = "0.1"
ethers = { version = "2", features = ["ws", "abigen"]}
rand = "0.8"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"
smart-default = "0.7"
sha3 = "0.10"
regex = "1"
peg = "0.8"

[dev-dependencies]
mockall = "0.12"
jsonrpsee = { version = "0.21", features = ["macros", "server", "client"] }
futures = "0.3"
tokio = { version = "1.34", features = ["macros", "rt", "time"] }
ctor = "0.2.5"
serde_json = "1"
