[workspace]
members = [
  "lib-didethresolver",
  "didethresolver-gateway"
]

exclude = [ ]

resolver = "2"

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.34", features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
jsonrpsee = { version = "0.21", features = ["macros", "server", "client-core"] }
async-trait = "0.1"
chrono = "0.4.31"
ethers = "2"
serde = { version = "1", features = ["derive"] }

