[package]
name = "didethresolver-gateway"
version = "0.1.0"
authors = ["XMTP Labs <eng@xmtp.com>"]
description = "Standalone did:ethr Resolution JSON-RPC Gateway"
homepage = "https://github.com/xmtp/didethresolver"
repository = "https://github.com/xmtp/didethresolver"
license = "MIT"
keywords = ["ethereum", "did", "did:ethr", "jsonrpc"]
categories = ["web-programming::websocket", "web-programming::http-server", "web-programming::http-client", "cryptography::cryptocurrencies"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
log.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ethers = { workspace = true, features = ["ws"] }
lib-didethresolver = { path = "../lib-didethresolver", features = ["server"] }
dotenvy = "0.15.7"
envy = "0.4.2"
