[package]
name = "libresolver"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
panic = 'abort'
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tokio.workspace = true
url.workspace = true
percent-encoding.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
jsonrpsee.workspace = true
anyhow.workspace = true
thiserror.workspace = true
argh.workspace = true
ethers.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
bs58.workspace = true
smart-default.workspace = true
sha3.workspace = true
regex.workspace = true
peg.workspace = true

[dev-dependencies]
mockall = "0.12"
jsonrpsee = { version = "0.21", features = ["macros", "server", "client"] }
futures = "0.3"
tokio = { version = "1.34", features = ["macros", "rt", "time"] }
ctor = "0.2.5"
serde_json = "1"
