[package]
name = "rpc_namespaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee.workspace = true 
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
ethers = { workspace = true, features = ["ws"] }
lib-didethresolver = { path = "../../lib-didethresolver", features = ["server"] }
